--- a/frontend/src/styles/ArtisanCard.scss
+++ b/frontend/src/styles/ArtisanCard.scss
@@ -1,30 +1,11 @@
-@import 'variables';
-@import 'mixins';
+@import "variables";
+@import "mixins";
 
 .artisan-card {
   @include card;
   display: flex;
   flex-direction: column;
   height: 100%;
-
-  .card-image {
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-    border-radius: $border-radius $border-radius 0 0;
-    margin: -$spacing-lg -$spacing-lg $spacing-lg -$spacing-lg;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transition: transform 0.3s;
-    }
-
-    &:hover img {
-      transform: scale(1.05);
-    }
-  }
 
   .card-content {
     flex: 1;
